Fixed minor bug causing sizing issues on mobile.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -587,7 +587,7 @@ footer a{
         padding-right: 120px;
     }
 
-    .album-image img{
+    .album-image {
         max-width: 100%;
     }
     
